--- a/src/Mcms/ProductBundle/Resources/views/Admin/edit.html.twig
+++ b/src/Mcms/ProductBundle/Resources/views/Admin/edit.html.twig
@@ -1,5 +1,9 @@
-{% extends '::base.html.twig' %}
+{% extends '::dashboard.html.twig' %}
 {% form_theme form '::formErrors.html.twig' %}
+
+{% block title %} Edycja produktu {% endblock %}
+
+{% block sidebar %} {% include 'McmsProductBundle:Admin:sidebar.html.twig' %} {% endblock %}
 
 {% block content %}
 	{{ form_errors(form.price) }}
@@ -18,9 +22,6 @@
 				</p>
 				<button type="submit">Aktualizuj</button>
 			</form>
-			
-			
 		</div>
 	</div>
 {% endblock %}
-
