admin profile tpl

--- a/src/Mcms/UserBundle/Resources/views/Admin/changePassword.html.twig
+++ b/src/Mcms/UserBundle/Resources/views/Admin/changePassword.html.twig
@@ -1,9 +1,10 @@
 {# src/Mcms/UserBundle/Resources/views/Admin/changePassword.html.twig #}
 {% extends '::dashboard.html.twig' %}
 
-{% block title %}{{ app.user }} - Change Password{% endblock %}
+{% block title %}{{ app.user }} - Zmiana hasła użytkownika{% endblock %}
 
 {% block content %}
+	<h1>Zmiana hasła użytkownika <em>{{app.user}}</em></h1>
     <form action="{{ path('admin.updatePassword')}}" method="post" {{ form_enctype(form) }}>
         {{form_errors(form)}}
         {{ form_widget(form) }}
