--- a/src/Mcms/UserBundle/Resources/views/Admin/editProfile.html.twig
+++ b/src/Mcms/UserBundle/Resources/views/Admin/editProfile.html.twig
@@ -1,8 +1,10 @@
 {# src/Mcms/UserBundle/Resources/views/Admin/editProfile.html.twig #}
 {% extends '::dashboard.html.twig' %}
 
-{% block title %}{{ app.user }} - Edit Profile{% endblock %}
+{% block title %}{{ app.user }} - Edycja profilu użytkownika{% endblock %}
+
 {% block content %}
+	<h1>Edycja profilu użytkownika <em>{{app.user}}</em></h1>
     <form action="{{ path('admin.updateProfile') }}" method="post" {{ form_enctype(form) }}>
         {{ form_errors(form) }}
         {{ form_widget(form) }}
