--- a/src/Mcms/UserBundle/Resources/views/list.html.twig
+++ b/src/Mcms/UserBundle/Resources/views/list.html.twig
@@ -18,15 +18,15 @@
 	<div class="tableOpt"></div><!--end table Options-->	
 		<table cellpadding="0" cellspacing="0" class="tableHead" width="100%" class="example">
 				<colgroup>
-					<col class="head1" width="20%" />
-					<col class="head0" width="20%" />
-					<col class="head1" width="20%" />
-					<col class="head0" width="20%" />
-					<col class="head1" width="20%" />					
+					<col class="head1" width="5%" />
+					<col class="head0" width="35%" />
+					<col class="head1" width="25%" />
+					<col class="head0" width="25%" />
+					<col class="head1" width="10%" />					
 				</colgroup>
 				<tr>
-					<td>Id</td>
-					<td>Login</td>
+					<td></td>
+					<td>Nazwa Użytkownika</td>
 					<td>Imię</td>
 					<td>Nazwisko</td>
 					<td>Aktywność</td> 					
@@ -35,25 +35,25 @@
 	<div class="tableWrapper">
         <table cellpadding="0" cellspacing="0" class="table" class="example" width="100%">
                 <colgroup>
-                    <col class="con1" width="20%" />
-                    <col class="con0" width="20%" />
-                    <col class="con1" width="20%" />
-                    <col class="con0" width="20%" />
-					<col class="con1" width="20%" /> 					
+                    <col class="con1" width="5%" />
+                    <col class="con0" width="35%" />
+                    <col class="con1" width="25%" />
+                    <col class="con0" width="25%" />
+					<col class="con1" width="10%" /> 					
                 </colgroup>
 
 		
 			{% for user in users %}
 				<tr>
-					<td><a href="{{ path('user_show', { 'id': user.id }) }}">{{ user.id }}</a></td>
+					<td style="text-align: center;"><a href="{{ path('user_show', { 'id': user.id }) }}"><img src="{{ asset('images/icons/edit.png') }}" /></a></td>
 					<td>{{ user.username }}</td>
 					<td>{{ user.firstname }}</td>
 					<td>{{ user.lastname }}</td>
-					<td> 
+					<td style="text-align: center;"> 
 					{% if user.isactive %}
-                            TRUE
+                            <img src="{{ asset('images/icons/success.png') }}" />
                         {% else %}
-                            FALSE
+                            <img src="{{ asset('images/icons/error.png') }}" />
                         {% endif %}
 					</td>
 				</tr>
