--- a/app/Resources/views/dashboard.html.twig
+++ b/app/Resources/views/dashboard.html.twig
@@ -9,8 +9,10 @@
 
 {% block tabmenu %}
 	<ul>
-		{{ helpers.tab('users_list', 'Lista użytkowników') }}
-		{{ helpers.tab('admin.productList', 'Lista produktów') }}
+		{{ helpers.tab('users_list', 'Strona glowna') }}
+		{{ helpers.tab('users_list', 'Uzytkownicy') }}
+		{{ helpers.tab('admin.productList', 'Produkty') }}
+		{{ helpers.tab('admin.productList', 'Terminarz') }}
 	</ul>
 {% endblock %}
 
