--- a/src/Mcms/UserBundle/Resources/views/Admin/editProfile.html.twig
+++ b/src/Mcms/UserBundle/Resources/views/Admin/editProfile.html.twig
@@ -1,14 +1,17 @@
 {# src/Mcms/UserBundle/Resources/views/Admin/editProfile.html.twig #}
 {% extends '::dashboard.html.twig' %}
 
-{% block title %}{{ app.user }} - Edycja profilu użytkownika{% endblock %}
-
-{% block content %}
-	<h1>Edycja profilu użytkownika <em>{{app.user}}</em></h1>
+{% block content %}	
     <form action="{{ path('admin.updateProfile') }}" method="post" {{ form_enctype(form) }}>
+<h1 class="pageTitle">Edycja profilu</h1>
+<div class="window1">
+	<h3><span></span></h3>
+	<div class="inside">
+    <form class="form_default" action="{{ path('admin.updateProfile') }}" method="post" {{ form_enctype(form) }}>
         {{ form_errors(form) }}
         {{ form_widget(form) }}
-
         <input type="submit" />
     </form>
+</div>
+</div>
 {% endblock %}
