--- a/src/Mcms/TimetableBundle/Resources/views/Patient/monthlyTimetable.html.twig
+++ b/src/Mcms/TimetableBundle/Resources/views/Patient/monthlyTimetable.html.twig
@@ -2,10 +2,62 @@
 {% block javascripts_head %}
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
     <script src="http://ajax.googleapis.com/ajax/libs/jqueryui/1.8/jquery-ui.min.js"></script>
+
 {% endblock %}
 
 {% block content %}
     <div id="calendar"></div>
+	<div id="hour_table">
+	<table>
+	<thead>
+		<tr><td class="hour_head">Godziny</td><td class="cont_head">Tresc</td></tr>
+	</thead>
+		<tr><td class="hour">8.00</td><td class="cont"></td></tr>
+		<tr><td class="hour"></td><td class="cont"></td></tr>
+		<tr><td class="hour"></td><td class="cont"></td></tr>
+		<tr><td class="hour"></td><td class="cont"></td></tr>
+		<tr><td class="hour">9.00</td><td class="cont"></td></tr>
+		<tr><td class="hour"></td><td class="cont"></td></tr>
+		<tr><td class="hour"></td><td class="cont"></td></tr>
+		<tr><td class="hour"></td><td class="cont"></td></tr>
+		<tr><td class="hour">10.00</td><td class="cont"></td></tr>
+		<tr><td class="hour"></td><td class="cont"></td></tr>
+		<tr><td class="hour"></td><td class="cont"></td></tr>
+		<tr><td class="hour"></td><td class="cont"></td></tr>
+		<tr><td class="hour">11.00</td><td class="cont"></td></tr>
+		<tr><td class="hour"></td><td class="cont"></td></tr>
+		<tr><td class="hour"></td><td class="cont"></td></tr>
+		<tr><td class="hour"></td><td class="cont"></td></tr>
+		<tr><td class="hour">12.00</td><td class="cont"></td></tr>
+		<tr><td class="hour"></td><td class="cont"></td></tr>
+		<tr><td class="hour"></td><td class="cont"></td></tr>
+		<tr><td class="hour"></td><td class="cont"></td></tr>
+		<tr><td class="hour">13.00</td><td class="cont"></td></tr>
+		<tr><td class="hour"></td><td class="cont"></td></tr>
+		<tr><td class="hour"></td><td class="cont"></td></tr>
+		<tr><td class="hour"></td><td class="cont"></td></tr>
+		<tr><td class="hour">14.00</td><td class="cont"></td></tr>
+		<tr><td class="hour"></td><td class="cont"></td></tr>
+		<tr><td class="hour"></td><td class="cont"></td></tr>
+		<tr><td class="hour"></td><td class="cont"></td></tr>
+		<tr><td class="hour">15.00</td><td class="cont"></td></tr>
+		<tr><td class="hour"></td><td class="cont"></td></tr>
+		<tr><td class="hour"></td><td class="cont"></td></tr>
+		<tr><td class="hour"></td><td class="cont"></td></tr>
+		<tr><td class="hour">16.00</td><td class="cont"></td></tr>
+		<tr><td class="hour"></td><td class="cont"></td></tr>
+		<tr><td class="hour"></td><td class="cont"></td></tr>
+		<tr><td class="hour"></td><td class="cont"></td></tr>
+		<tr><td class="hour">17.00</td><td class="cont"></td></tr>
+		<tr><td class="hour"></td><td class="cont"></td></tr>
+		<tr><td class="hour"></td><td class="cont"></td></tr>
+		<tr><td class="hour"></td><td class="cont"></td></tr>
+		<tr><td class="hour">18.00</td><td class="cont"></td></tr>
+		
+	</table>
+	
+	</div>
+	<!--<div id="mytable"></div>-->
 {% endblock %}
 
 {% block javascripts_body %}
@@ -48,5 +100,9 @@
             });
             }
         });
-    </script>
+ 
+
+</script>
+
+	
 {% endblock %}
