--- a/app/Resources/views/dashboard.html.twig
+++ b/app/Resources/views/dashboard.html.twig
@@ -5,12 +5,15 @@
 {% block stylesheets %}
 	{{ parent() }}
 	<link href="{{ asset('css/dashboard.css') }}" rel="stylesheet" type="text/css" />
+
 {% endblock %}
 
 {% block tabmenu %}
 	<ul>
-		{{ helpers.tab('users_list', 'Lista użytkowników') }}
-		{{ helpers.tab('admin.productList', 'Lista produktów') }}
+		{{ helpers.tab('users_list', 'Strona glowna') }}
+		{{ helpers.tab('users_list', 'Uzytkownicy') }}
+		{{ helpers.tab('admin.productList', 'Produkty') }}
+		{{ helpers.tab('admin.productList', 'Terminarz') }}
 	</ul>
 {% endblock %}
 
