--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -30,7 +30,7 @@
 			<div id="account">
 				<h3>{{ app.user.firstname }} {{ app.user.lastname }}</h3>
 				<p>
-					<a href="{{ path(app.session.get('roleTheme')|lower ~ '.editProfile') }}">Mój profil</a> <a href="{{ path('logout') }}">Wyloguj</a>
+					<a href="{{ path(app.session.get('roleTheme')|lower ~ '.profile') }}">Mój profil</a> <a href="{{ path('logout') }}">Wyloguj</a>
 					<a href="?_switch_user=patient">Patient</a>
 					<a href="?_switch_user=admin">Admin</a>
 					<a href="?_switch_user=employee">Employee</a>
