--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -10,7 +10,8 @@
 		<script src="{{ asset('js/jquery-1.7.2.min.js') }}" type="text/javascript" ></script>
 		<script src="{{ asset('js/main_scripts.js') }}" type="text/javascript" ></script>
 		<script src="{{ asset('js/jquery.dataTables.min.js') }}" type="text/javascript" ></script>
-		{% block javascripts_head %} {% endblock %}
+		{% block javascripts_head %} 
+		{% endblock %}
     </head>
     <body>
 	<div id="header">
