--- a/app/Resources/views/dashboard.html.twig
+++ b/app/Resources/views/dashboard.html.twig
@@ -10,10 +10,10 @@
 
 {% block tabmenu %}
 	<ul>
-		{{ helpers.tab('users_list', 'Strona glowna') }}
-		{{ helpers.tab('users_list', 'Uzytkownicy') }}
-		{{ helpers.tab('admin.productList', 'Produkty') }}
-		{{ helpers.tab('admin.productList', 'Terminarz') }}
+		{{ helpers.tab('users_list', 'home', 'Strona glowna') }}
+		{{ helpers.tab('users_list','users', 'Uzytkownicy') }}
+		{{ helpers.tab('admin.productList', 'products', 'Produkty') }}
+		{{ helpers.tab('admin.productList','calendar', 'Terminarz') }}
 	</ul>
 {% endblock %}
 
