--- a/web/css/style.css
+++ b/web/css/style.css
@@ -70,7 +70,19 @@ div#header div#tabmenu ul li a:hover { text-decoration: none; }
 div#header div#tabmenu ul li a span { display: block; padding: 9px 15px 9px 40px; text-transform: uppercase; font-size: 12px; text-shadow: 1px 1px #224e82; }
 div#header div#tabmenu ul li.current { background: #eee; text-shadow: 1px 1px #fff; }
 div#header div#tabmenu ul li.current a { color: #333; background: none; }
+div#header div#tabmenu ul li a.home span { background: url(../images/icons/home.png) no-repeat 10px 10px; background-size:22px 17px; }
+div#header div#tabmenu ul li.current a.home span { background: url(../images/icons/home.png) no-repeat 10px 10px;background-size:22px 17px;}
+div#header div#tabmenu ul li a.users span { background: url(../images/icons/user_list.png) no-repeat 10px 10px;background-size:22px 17px;}
+div#header div#tabmenu ul li.current a.users span { background: url(../images/icons/user_list.png) no-repeat 10px 10px; background-size:22px 17px;}
+div#header div#tabmenu ul li a.products span { background: url(../images/icons/product.png) no-repeat 10px 10px;background-size:22px 17px;}
+div#header div#tabmenu ul li.current a.products span { background: url(../images/icons/product.png) no-repeat 10px 10px;background-size:22px 17px; }
+div#header div#tabmenu ul li a.calendar span { background: url(../images/icons/calendar.png) no-repeat 10px 10px;background-size:22px 17px;}
+div#header div#tabmenu ul li.current a.calendar span { background: url(../images/icons/calendar.png) no-repeat 10px 10px; background-size:22px 17px;}
+
 div#header div#tabmenu ul li.current a span { text-shadow: 1px 1px #fcfcfc; }
+
+.tabmenu ul li a.dashboard span { background: url(../images/icons/dashboard.png) no-repeat 15px 12px; }
+.tabmenu ul li.current a.dashboard span { background: url(../images/icons/dashboard.png) no-repeat 15px -57px; }
 
 /***SIDEBAR***/
 div#sidebar { padding: 20px 0 20px 0; width: 220px; display: block; float: left; }
@@ -78,10 +90,17 @@ div#sidebar h3 { background: url("../images/arrow.png") no-repeat 10px 6px; padd
 div#sidebar h3.open { background: url("../images/arrow.png") no-repeat 10px -37px; }
 div#sidebar>.subside ul{}
 div#sidebar>.subside li{ display: block;  width:220px;}
-div#sidebar>.subside li a { font-size: 12px; display: block; padding: 5px 0 5px 50px; color: #37507F;list-style-type:square;background-image: url(../images/icons/bluetrans.png); background-repeat: no-repeat; background-position: 30px center;  }
-div#sidebar>.subside li a:hover {background-color: #eee; border-right: 0;padding: 5px 0 5px 50px; color: #333; }
+div#sidebar>.subside li a { font-size: 12px; display: block; padding: 5px 0 5px 70px; color: #37507F;}
+div#sidebar>.subside li a:hover {background-color: #eee; border-right: 0;padding: 5px 0 5px 70px; color: #333; }
 div#sidebar>.subside li.current a { background-color: #eee; border-right: 0; color: #333; border-top: 1px solid #a6c0de; border-bottom: 1px solid #a6c0de; }
 div#sidebar>.subside li.current a:hover { text-decoration: none; }
+
+div#sidebar>.subside li.user_add a{background-image: url(../images/icons/user_add.png); background-repeat: no-repeat; background-position: 30px center; background-size:20px 15px;   }
+div#sidebar>.subside li.user_list a{background-image: url(../images/icons/user_list.png); background-repeat: no-repeat; background-position: 30px center; background-size:20px 15px;  }
+div#sidebar>.subside li.new_product a{ background-image: url(../images/icons/product_add.png); background-repeat: no-repeat; background-position: 30px center; background-size:20px 15px; }
+div#sidebar>.subside li.product_list a{ background-image: url(../images/icons/product_list.png); background-repeat: no-repeat; background-position: 30px center; background-size:20px 15px; }
+div#sidebar>.subside li.calendar a{ background-image: url(../images/icons/calendar.png); background-repeat: no-repeat; background-position: 30px center; background-size:20px 15px; }
+
 
 /***MESSAGES / ALERTS***/
 .message { padding: 10px 10px 10px 45px; margin: 0 0 20px 0; -moz-border-radius: 2px; -webkit-border-radius: 2px; border-radius: 2px; position: relative; }
