--- a/src/Mcms/ProductBundle/Resources/views/Admin/edit.html.twig
+++ b/src/Mcms/ProductBundle/Resources/views/Admin/edit.html.twig
@@ -16,8 +16,8 @@
 		<div class="inside">			
 			<form class="form_default" action="{{ path('admin.productUpdate',{ 'id': product.id }) }}" method="post" {{ form_enctype(form) }}>
 				<p>	
-					{{ form_label(form.name) }}  {{ form_widget(form.name) }}</br></br>
-					{{ form_label(form.price) }}  {{ form_widget(form.price) }}					
+					<label>Nazwa:</label>  {{ form_widget(form.name) }}</br></br>
+					<label>Cena:</label>  {{ form_widget(form.price) }}					
 					{{ form_rest(form) }}
 				</p>
 				<button type="submit">Aktualizuj</button>
