--- a/src/Mcms/MedicalHistoryBundle/Resources/views/Patient/list.html.twig
+++ b/src/Mcms/MedicalHistoryBundle/Resources/views/Patient/list.html.twig
@@ -43,7 +43,7 @@
 				<tr>
 					<td>{{ entry.createdAt|date('Y.m.d H:i') }}</td>
 					<td>{{ entry.doctor }}</td>
-					<td>{{ entry.content }}</td>
+					<td>{{ entry.content|slice(0, 200) }}...</td>
 					<td><a class="profilelink" href="{{ path('patient.medicalHistoryShow', { 'entryId': entry.id }) }}">{{ entry.id }}</a></td>
 				</tr>
 			{% endfor %}
