--- a/src/Mcms/DashboardBundle/Resources/views/Employee/index.html.twig
+++ b/src/Mcms/DashboardBundle/Resources/views/Employee/index.html.twig
@@ -1,5 +1,5 @@
 {# src/Mcms/DashboardBundle/Resources/views/Employee/index.html.twig #}
-{% extends '::dashboard.html.twig' %}
+{% extends '::employeeDashboard.html.twig' %}
 
 {% block content %}
     Employee dashboard content
