--- a/src/Mcms/DashboardBundle/Resources/views/Patient/patientIndex.html.twig
+++ b/src/Mcms/DashboardBundle/Resources/views/Patient/patientIndex.html.twig
@@ -1,5 +1,5 @@
 {# src/Mcsm/DashboardBundle/Resources/views/patientIndex.html.twig #}
-{% extends '::dashboard.html.twig' %}
+{% extends '::patientDashboard.html.twig' %}
 
 {% block title %}Patient Dashboard{% endblock %}
 
