--- a/src/Mcms/DashboardBundle/Resources/views/Patient/showTimetable.html.twig
+++ b/src/Mcms/DashboardBundle/Resources/views/Patient/showTimetable.html.twig
@@ -1,5 +1,5 @@
 {# /src/Mcms/DashboardBundle/Resources/views/Patient/showTimetable.html.twig #}
-{% extends '::dashboard.html.twig' %}
+{% extends '::patientDashboard.html.twig' %}
 
 {% block title %}Mój terminarz{% endblock %}
 
