--- a/src/Mcms/EmployeeBundle/Resources/views/Patient/list.html.twig
+++ b/src/Mcms/EmployeeBundle/Resources/views/Patient/list.html.twig
@@ -1,5 +1,5 @@
 {# src/Mcms/EmployeeBundle/Resources/views/Patient/list.html.twig #}
-{% extends '::dashboard.html.twig' %}
+{% extends '::patientDashboard.html.twig' %}
 
 {% block title %}Lista lekarzy{% endblock %}
 
