--- a/src/Mcms/MedicalHistoryBundle/Resources/views/Patient/show.html.twig
+++ b/src/Mcms/MedicalHistoryBundle/Resources/views/Patient/show.html.twig
@@ -1,5 +1,5 @@
 {# src/Mcms/MedicalHistoryBundle/Resources/views/Patient/show.html.twig #}
-{% extends '::dashboard.html.twig' %}
+{% extends '::patientDashboard.html.twig' %}
 
 {% block title %} Karta pacjenta - szczegóły wpisu #{{ entry.id }} {% endblock %}
 
