--- a/src/Mcms/ProductBundle/Resources/views/Admin/list.html.twig
+++ b/src/Mcms/ProductBundle/Resources/views/Admin/list.html.twig
@@ -1,5 +1,5 @@
 {# src/Mcms/ProductBundle/Resources/views/Admin/list.html.twig #}
-{% extends '::dashboard.html.twig' %}
+{% extends '::adminDashboard.html.twig' %}
 
 {% block javascripts_head %}
 	<script type="text/javascript">
