--- a/src/Mcms/ProductBundle/Resources/views/Admin/new.html.twig
+++ b/src/Mcms/ProductBundle/Resources/views/Admin/new.html.twig
@@ -1,4 +1,4 @@
-{% extends '::dashboard.html.twig' %}
+{% extends '::adminDashboard.html.twig' %}
 {% form_theme form '::formErrors.html.twig' %}
 
 {% block title %} Utwórz nowy produkt {% endblock %}
