--- a/src/Mcms/ProductBundle/Resources/views/Admin/show.html.twig
+++ b/src/Mcms/ProductBundle/Resources/views/Admin/show.html.twig
@@ -1,4 +1,4 @@
-{% extends '::dashboard.html.twig' %}
+{% extends '::adminDashboard.html.twig' %}
 
 {% block javascripts_head %}
 <script type="text/javascript">
