--- a/src/Mcms/UserBundle/Resources/views/Admin/changePassword.html.twig
+++ b/src/Mcms/UserBundle/Resources/views/Admin/changePassword.html.twig
@@ -1,5 +1,5 @@
 {# src/Mcms/UserBundle/Resources/views/Admin/changePassword.html.twig #}
-{% extends '::dashboard.html.twig' %}
+{% extends '::adminDashboard.html.twig' %}
 
 {% block title %}{{ app.user }} - Zmiana hasła użytkownika{% endblock %}
 
