--- a/src/Mcms/UserBundle/Resources/views/Admin/profile.html.twig
+++ b/src/Mcms/UserBundle/Resources/views/Admin/profile.html.twig
@@ -1,5 +1,5 @@
 {# src/Mcms/UserBundle/Resources/views/Admin/profile.html.twig #}
-{% extends '::dashboard.html.twig' %}
+{% extends '::adminDashboard.html.twig' %}
 {% block title %}{{app.user}} - Profil użytkownika{% endblock %}
 {% block content %}
    
