--- a/src/Mcms/DashboardBundle/Resources/views/Admin/index.html.twig
+++ b/src/Mcms/DashboardBundle/Resources/views/Admin/index.html.twig
@@ -1,5 +1,5 @@
 {# src/Mcms/DashboardBundle/Resources/views/Admin/index.html.twig #}
-{% extends '::dashboard.html.twig' %}
+{% extends '::adminDashboard.html.twig' %}
 
 {% block content %}
     Admin dashboard content
