--- a/src/Mcms/DashboardBundle/Resources/views/Patient/index.html.twig
+++ b/src/Mcms/DashboardBundle/Resources/views/Patient/index.html.twig
@@ -1,5 +1,5 @@
 {# src/Mcms/DashboardBundle/Resources/views/Patient/index.html.twig #}
-{% extends '::dashboard.html.twig' %}
+{% extends '::patientDashboard.html.twig' %}
 
 {% block content %}
     Patient dashboard content
