--- a/src/Mcms/DashboardBundle/Resources/views/Patient/showEmployeeTimetable.html.twig
+++ b/src/Mcms/DashboardBundle/Resources/views/Patient/showEmployeeTimetable.html.twig
@@ -1,5 +1,5 @@
 {# src/Mcms/DashboardBundle/Resources/views/Patient/showEmployeeTimetable.html.twig #}
-{% extends '::dashboard.html.twig' %}
+{% extends '::patientDashboard.html.twig' %}
 
 {% block title %}{{ employee }} - Terminarz{% endblock %}
 
