--- a/src/Mcms/MedicalHistoryBundle/Resources/views/Employee/edit.html.twig
+++ b/src/Mcms/MedicalHistoryBundle/Resources/views/Employee/edit.html.twig
@@ -1,5 +1,5 @@
 {# src/Mcms/MedicalHistoryBundle/Resources/views/Employee/edit.html.twig #}
-{% extends '::dashboard.html.twig' %}
+{% extends '::employeeDashboard.html.twig' %}
 
 {% block content %}
     <form class="form_default" action="{{ path('employee.medicalHistoryUpdate',{ patientId: patient.Id, entryId: entry.Id }) }}" method="post" {{ form_enctype(form) }}>
