--- a/src/Mcms/MedicalHistoryBundle/Resources/views/Patient/list.html.twig
+++ b/src/Mcms/MedicalHistoryBundle/Resources/views/Patient/list.html.twig
@@ -1,5 +1,5 @@
 {# src/Mcms/MedicalHistoryBundle/Resources/views/Patient/list.html.twig #}
-{% extends '::dashboard.html.twig' %}
+{% extends '::patientDashboard.html.twig' %}
 
 {% block javascripts_head %}
 	<script type="text/javascript">
