--- a/src/Mcms/TimetableBundle/Resources/views/Patient/monthlyTimetable.html.twig
+++ b/src/Mcms/TimetableBundle/Resources/views/Patient/monthlyTimetable.html.twig
@@ -1,4 +1,4 @@
-{% extends '::dashboard.html.twig' %}
+{% extends '::patientDashboard.html.twig' %}
 {% block javascripts_head %}
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
     <script src="http://ajax.googleapis.com/ajax/libs/jqueryui/1.8/jquery-ui.min.js"></script>
