--- a/src/Mcms/TimetableBundle/Resources/views/Patient/myTimetable.html.twig
+++ b/src/Mcms/TimetableBundle/Resources/views/Patient/myTimetable.html.twig
@@ -1,4 +1,4 @@
-{% extends '::dashboard.html.twig' %}
+{% extends '::patientDashboard.html.twig' %}
 
 {% block content %}
     <div id="timetable">
