--- a/src/Mcms/UserBundle/Resources/views/Admin/editProfile.html.twig
+++ b/src/Mcms/UserBundle/Resources/views/Admin/editProfile.html.twig
@@ -1,5 +1,5 @@
 {# src/Mcms/UserBundle/Resources/views/Admin/editProfile.html.twig #}
-{% extends '::dashboard.html.twig' %}
+{% extends '::adminDashboard.html.twig' %}
 {% form_theme form '::formErrors.html.twig' %}
 
 {% block title %}{{ app.user }} - Edycja profilu użytkownika{% endblock %}
